# taskschedule

./: .gitignore  flake.nix  pyproject.toml
taskschedule/: hooks.py  main.py  schedule.py  scheduled_task.py  screen.py  taskwarrior.py  utils.py
taskschedule/tasklib3/: backends.py  database.py  exceptions.py  pydantic_semver.py  sqlpydantic.py  task.py  test_backend.py
taskschedule/tasklib3/test_data/: taskrc
tests/: conftest.py  test_main.py
